<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/frame02"
    android:orientation="vertical"
    tools:context=".activity.Popup_option">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:text="@string/popup_option_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/frame03"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/popup_option_type01"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/bongearbbang"
            android:textAlignment="center"/>
        <CheckBox
            android:id="@+id/popup_option_type02"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/ddunckbbunggi"
            android:textAlignment="center"/>
        <CheckBox
            android:id="@+id/popup_option_type03"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/hottuck"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/popup_option_type04"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/gungoguma"
            android:textAlignment="center"/>
        <CheckBox
            android:id="@+id/popup_option_type05"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/pulbbang"
            android:textAlignment="center"/>
        <CheckBox
            android:id="@+id/popup_option_type06"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:text="@string/takoyaki"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/popup_option_type07"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/etc"
            android:button="@null"
            android:background="@drawable/checkbox_frame01"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/popup_option_okBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            android:text="@string/ok"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/frame03" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/popup_option_cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/frame03"/>
    </LinearLayout>

</LinearLayout>