<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/otherLogin"
    tools:context=".activity.Activity_OtherLogin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/otherLogin_linearLayout"
        android:src="@drawable/app_mini"/>

    <LinearLayout
        android:id="@+id/otherLogin_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/frame08">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/user_id"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/otherLogin_idEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:background="@drawable/frame05"
                android:inputType="textVisiblePassword"
                android:maxLength="30" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/user_pw"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/otherLogin_pwEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="5dp"
                android:background="@drawable/frame05"
                android:maxLength="30"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/otherLogin_cb01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autoLogin" />
            <CheckBox
                android:id="@+id/otherLogin_cb02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/idSave"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/otherLogin_loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/frame03"
                android:text="@string/login"
                android:textColor="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/otherLogin_closeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@drawable/frame03"
                android:text="@string/close"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/otherLogin_registerBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherLogin_linearLayout"
        app:layout_constraintRight_toLeftOf="@id/otherLogin_findInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerGo"
        android:textColor="@color/pink02"
        android:background="@null"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/otherLogin_findInfoBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherLogin_linearLayout"
        app:layout_constraintLeft_toRightOf="@+id/otherLogin_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findInfo"
        android:textColor="@color/pink02"
        android:background="@null"/>

</androidx.constraintlayout.widget.ConstraintLayout>